force-app/main/default/objects/Revenue_Budget__c/Revenue_Budget__c.object-meta.xml
<CustomObject>
    <label>Revenue Budget</label>
    <nameField>
        <label>Revenue Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Budget</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>