force-app/main/default/objects/Revenue_Budget__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Connections</fullName>
            </value>
            <value>
                <fullName>Forum</fullName>
            </value>
            <value>
                <fullName>Intelligence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>